Fixed link space and added address for buttons

--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
                         <div class="title">Zorganizuj się 
                             lepiej niż inni</div>
                         <div class="text">Usprawnij planowanie treningów, śledzenie postępów i inne elementy pracy Trenera Personalnego</div>
-                        <a href="#" class="button">Otrzymaj wczesny dostęp</a>
+                        <a href="subscription.html" class="button">Otrzymaj wczesny dostęp</a>
                     </div>
                 </div>
             </div>
@@ -43,7 +43,7 @@
                     <div class="description-box">
                         <div class="title">Klienci sami zarezerwują trening w Twoim kalendarzu</div>
                         <div class="text">Oznacz kiedy jesteś dostępny, a podopieczni sami zarezerwują trening w aplikacji. Od razu zobaczysz je w kalendarzu.</div>
-                        <a href="#" class="button">Otrzymaj wczesny dostęp</a>
+                        <a href="subscription.html" class="button">Otrzymaj wczesny dostęp</a>
                     </div>
                 </div>
                 <div class="col-lg-5 z-index-2">
@@ -78,7 +78,7 @@
                     <div class="description-box">
                         <div class="title">Szybciej, wygodniej i dokładniej niż na kartce</div>
                         <div class="text">Kalendarz, historia treningów, pomiary, cele treningowe, ćwiczenia, karta medyczna – wszystko pod ręką.</div>
-                        <a href="#" class="button">Otrzymaj wczesny dostęp</a>
+                        <a href="subscription.html" class="button">Otrzymaj wczesny dostęp</a>
                     </div>
                 </div>
             </div>
@@ -91,7 +91,7 @@
                     <div class="description-box">
                         <div class="title">Efekty jak na dłoni</div>
                         <div class="text">Podnieś motywację i satysfakcję podopiecznych dzięki statystykom. Nawet mały dokumentowany postęp jest lepszy niż wrażenie zastoju.</div>
-                        <a href="#" class="button">Otrzymaj wczesny dostęp</a>
+                        <a href="subscription.html" class="button">Otrzymaj wczesny dostęp</a>
                     </div>
                 </div>
             </div>
@@ -109,7 +109,7 @@
                     <div class="description-box">
                         <div class="title">Bez dzwonienia i smsów</div>
                         <div class="text">Nie musisz sprawdzać smsów, facebooka, WhatsApp czy innych komunikatorów, od teraz cała liste kontaktów z podopiecznymi możesz mieć w jednym miejscu.</div>
-                        <a href="#" class="button">Otrzymaj wczesny dostęp</a>
+                        <a href="subscription.html" class="button">Otrzymaj wczesny dostęp</a>
                     </div>
                 </div>
             </div>
@@ -122,7 +122,7 @@
                         <div class="description-box">
                             <div class="title">Popraw motywację klientów</div>
                             <div class="text">Wzmocnij lojalność, zadowolenie i motywację podopiecznych usprawniając waszą współpracę.</div>
-                            <a href="#" class="button">Otrzymaj wczesny dostęp</a>
+                            <a href="subscription.html" class="button">Otrzymaj wczesny dostęp</a>
                         </div>
                     </div>
                 </div>
@@ -139,7 +139,7 @@
                         <div class="name">Mieczyslaw Kowalewski</div>
                         <div class="who">Trener personalny, Energy Fitness</div>
                         <div class="about">Bardzo super apka widzialem i polecam jesc duzo marchewki siemaneczko bardzo usprawnia mi prace i nie trace czasu na organizacje blabal lorem</div>
-                        <a href="#" class="profile">Zobacz profil na Facebooku</a>
+                        <a href="subscription.html" class="profile">Zobacz profil na Facebooku</a>
                     </div>
                     <div class="card">
                         <div class="photo">
@@ -179,12 +179,12 @@
                     <div class="description-box">
                         <div class="title">Zacznij korzystać pierwszy</div>
                         <div class="text">Usprawnij planowanie treningów, śledzenie postępów i inne elementy pracy Trenera Personalnego</div>
-                        <a href="#" class="button">Otrzymaj wczesny dostęp</a>
+                        <a href="subscription.html" class="button">Otrzymaj wczesny dostęp</a>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-12">
+                <div class="col-12 mt-15">
                     <div class="hr"></div>
                 </div>
             </div>
