added success page

--- a/app/success.html
+++ b/app/success.html
@@ -10,7 +10,7 @@
      <link rel="stylesheet" href="css/bootstrap.css" type="text/css" media="all">
 </head>
 <body>
-    <section id="header_subscription">
+    <section id="header_success">
         <div class="container">
             <div class="row">
                 <div class="col">
@@ -24,8 +24,8 @@
             <div class="row">
                 <div class="col-lg-5">
                     <div class="header-title-box">
-                        <div class="title">Zacznij korzystać pierwszy</div>
-                        <div class="description">Powiadomimy Cię, gdy aplikacja będzie gotowa.</div>
+                        <div class="title">Dzięki za kontakt!</div>
+                        <div class="description">Powiadomimy Cię, gdy aplikacja będzie gotowa</div>
                     </div>
                 </div>
             </div>
@@ -35,17 +35,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 pl-none">
-                    <form action="success.html" method="GET">
-                        <div class="form-group">
-                            <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Twoj email" name="email">
+                    <div class="social-box">
+                        <div class="title">Nie możesz się doczekać? Obserwuj nas i bądź na bieżąco</div>
+                        <div class="social-buttons">
+                            <a href="#" class="facebook">Polub nas na Facebooku</a>
+                            <a href="#" class="instagram">Obserwuj nas na Instagramie</a>
                         </div>
-                        <label>
-                            <input class="checkbox" type="checkbox" name="checkbox-test">
-                            <span class="checkbox-custom"></span>
-                            <span class="label">Wyrazam zgode Jak tylko pojawi sie lorem ipsum otrzymasz dostep do aplikacji na jeden miesiac za darmo llfdsfplsd alsd.</span>
-                        </label>
-                        <button type="submit" class="button">Zapisz się</button>
-                    </form>
+                    </div>
                 </div>
             </div>
         </div>
