fixed col-lg size

--- a/app/index.html
+++ b/app/index.html
@@ -86,7 +86,7 @@
     <section id="progress">
         <div class="container">
             <div class="row jcc">
-                <div class="col-xl-5 col-md-10">
+                <div class="col-xl-5 col-lg-12 col-md-10">
                     <div class="description-box">
                         <div class="title">Efekty jak na dłoni</div>
                         <div class="text">Podnieś motywację i satysfakcję podopiecznych dzięki statystykom. Nawet mały dokumentowany postęp jest lepszy niż wrażenie zastoju.</div>
