adaptation of the main page is completed

--- a/app/index.html
+++ b/app/index.html
@@ -39,14 +39,14 @@
     <section id="how_it_works">
         <div class="container">
             <div class="row first-part justify-content-between">
-                <div class="col-lg-6 col-md-10 order-md-2 order-lg-1">
+                <div class="col-lg-6 col-md-10 order-2 order-lg-1">
                     <div class="description-box">
                         <div class="title">Klienci sami zarezerwują trening w Twoim kalendarzu</div>
                         <div class="text">Oznacz kiedy jesteś dostępny, a podopieczni sami zarezerwują trening w aplikacji. Od razu zobaczysz je w kalendarzu.</div>
                         <a href="subscription.html" class="button">Otrzymaj wczesny dostęp</a>
                     </div>
                 </div>
-                <div class="col-lg-5 col-md-10 z-index-2 order-md-1 order-lg-2">
+                <div class="col-lg-5 col-md-10 z-index-2 order-1 order-lg-2">
                     <div class="image-box d-flex justify-content-between">
                         <div class="image">
                             <img src="images/gif-3-25-fps.gif" alt="1">
@@ -98,13 +98,13 @@
     </section>
     <section id="without_calls_and_sms">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-5  d-flex align-items-center">
+            <div class="row jcc">
+                <div class="col-lg-5 col-md-10  d-flex align-items-center">
                     <div class="image-box">
                         <img src="images/5.png" alt="3">
                     </div>
                 </div>
-                <div class="col-lg-7 d-flex align-items-center">
+                <div class="col-lg-7 col-md-10 d-flex align-items-center">
                     <div class="description-box">
                         <div class="title">Bez dzwonienia i smsów</div>
                         <div class="text">Nie musisz sprawdzać smsów, facebooka, WhatsApp czy innych komunikatorów, od teraz cała liste kontaktów z podopiecznymi możesz mieć w jednym miejscu.</div>
@@ -116,8 +116,8 @@
     </section>
     <section id="motivation">
             <div class="container">
-                <div class="row">
-                    <div class="col-xl-6 col-lg-6  d-flex align-items-center">
+                <div class="row jcc-768">
+                    <div class="col-xl-6 col-lg-6 col-md-10  d-flex align-items-center">
                         <div class="description-box">
                             <div class="title">Popraw motywację klientów</div>
                             <div class="text">Wzmocnij lojalność, zadowolenie i motywację podopiecznych usprawniając waszą współpracę.</div>
@@ -130,7 +130,7 @@
     <section id="coaches">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-xl-10 col-lg-9 owl-carousel owl-theme">
+                <div class="col-xl-10 col-lg-9 col-md-10 owl-carousel owl-theme">
                     <div class="card">
                         <div class="photo">
                             <img src="images/photo.png" alt="Photo">
@@ -183,12 +183,12 @@
                 </div>
             </div>
             <div class="row justify-content-center">
-                <div class="col-xl-12 col-lg-10 mt-15">
+                <div class="col-xl-12 col-lg-10 col-md-10 mt-15">
                     <div class="hr"></div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-xl-2 col-lg-3">
+            <div class="row jcc-768">
+                <div class="col-xl-2 col-lg-3 col-md-10">
                     <div class="socials">
                         <a href="#">
                             <img src="images/facebook.svg" alt="Facebook">
@@ -199,8 +199,8 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-xl-2 col-lg-3">
+            <div class="row jcc-768">
+                <div class="col-xl-2 col-lg-3 col-md-10">
                     <div class="links-box">
                         <div class="links"><a href="#">Lorem ipsum</a></div>
                         <div class="links"><a href="#">Dolor</a></div>
@@ -210,8 +210,8 @@
                     
                 </div>
             </div>
-            <div class="row">
-                <div class="col-xl-6 col-lg-7">
+            <div class="row jcc-768">
+                <div class="col-xl-6 col-lg-7 col-md-10">
                     <div class="copyrights">© 2018 Herooo App. Wszelkie prawa zastrzeżone.</div>
                 </div>
             </div>
