--- a/app/index.html
+++ b/app/index.html
@@ -73,9 +73,9 @@
                         <img class="slide-box-img" src="images/3.png" alt="3">
                         <div class="slider">
                             <div class="slider-nav">
-                                <p id="0" class="slider-nav-link active">Treningi</p>
-                                <p id="1" class="slider-nav-link">Szczegoly</p>
-                                <p id="2" class="slider-nav-link">Rozliczenia</p>
+                                <p data-id="0" class="slider-nav-link active">Treningi</p>
+                                <p data-id="1" class="slider-nav-link">Szczegoly</p>
+                                <p data-id="2" class="slider-nav-link">Rozliczenia</p>
                             </div>
                             <div id="owl-carousel1"class="slides-box owl-carousel owl-theme">
                                 <div class="slide">
