--- a/app/index.html
+++ b/app/index.html
@@ -209,10 +209,10 @@
                 <div class="col-xl-2 col-lg-3 col-md-10">
                     <div class="socials">
                         <a href="#">
-                            <img src="images/facebook.svg" alt="Facebook">
+                            <i class="icon-facebook"></i>
                         </a>
                         <a href="#">
-                            <img src="images/instagram.svg" alt="Instagram">
+                            <i class="icon-instagram"></i>
                         </a>
                     </div>
                 </div>
